Fixed subdocuments not showing up when a user is the creator of the subdocument.

--- a/app/packages/document/client/ui/_document.scss
+++ b/app/packages/document/client/ui/_document.scss
@@ -388,7 +388,6 @@
 
 #subdocument-list {
   width: 206px;
-  height: 453px;
   float: left;
   overflow: hidden;
   .panel-heading {
@@ -397,7 +396,7 @@
   .panel-body {
     padding: 5px;
     overflow: auto;
-    height: 100%;
+    height: 400px;
   }
   ul.s-document-list {
     list-style: none;
